[tool.poetry]
name = "persistence"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov, Pavel Semishin <mikhailov.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
pytest = "^7.2.2"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
